MCQ CSS fix
* do not display answerable open question in italic
* fix vertical scrollbar for open questions

--- a/wegas-app/src/main/webapp/wegas-mcq/css/wegas-mcq-view.css
+++ b/wegas-app/src/main/webapp/wegas-mcq/css/wegas-mcq-view.css
@@ -10,11 +10,14 @@
  */
 
 /*.wegas-mcqview-content:not([data-displayResult='bottom']) {*/
+.wegas-vhview,
 .wegas-mcqview {
     height:100%;
 }
 
+.wegas-whview .wegas-whview-content,
 .wegas-mcqview .wegas-mcqview-content {
+    height:100%;
     overflow-y: auto;
 }
 
@@ -898,4 +901,3 @@
 .wegas-whview .wegas-string-input ul.wegas-string-input-checkboxes li:first-child {
     margin-left: 0;
 }
-
